[package]
name = "nau7802-rs"
version = "0.1.0-alpha"
authors = ["Amer Safdari <amersafdari@gmail.com>"]
edition = "2018"

[lib]
test = false
bench = false

[features]
default = []
embedded-hal-adc = ["embedded-hal/unproven"]

[dependencies]
nb = "1.0.0"
embedded-hal = "0.2.4"

[dependencies.byteorder]
version = "1.3.4"
default-features = false
