[package]
name = "nau7802"
version = "0.1.0-alpha"
authors = ["Amer Safdari <amersafdari@gmail.com>"]
edition = "2018"

[lib]
test = false
bench = false

[features]
default = []
embedded-hal-adc = ["embedded-hal/unproven", "nb"]

[dependencies]
embedded-hal = "0.2.4"

[dependencies.byteorder]
version = "1.3.4"
default-features = false

[dependencies.nb]
version = "1.0.0"
optional = true
